# building-knowledge-graphs

./: .env.template  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  knowledge_extraction_neo4j.ipynb  knowledge_ingestion_and_graph_exploration.ipynb  neo4j-intro.ipynb  ontologies-ocdi-neo4j-wearedevelopers.ipynb  pyproject.toml  test_processing.ipynb
misc/from_rag_to_knowledge_graphs/: from_rag_to_knowledge_graphs_in_2027_demo_plan.md  knowledge_extraction_neo4j_demo.py
misc/ontologies-ocdi-neo4j-wearedevelopers/: neo4j_booth_wine_demo.py  neo4j_booth_wine_demo_plan.md
prompts/: graph-metadata-extractor.py  metadata-extractor.py  winde_demo_prompts.py  wine_demo_prompts.py
