[project]
name = "ai"
version = "0.1.0"
authors = ["konradbjk <konradbjk@gmail.com>"]
description = "Knowledge graph talk notebooks and experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "isodate>=0.7.2",
    "jinja2>=3.1.6",
    "lark>=1.3.1",
    "matplotlib>=3.10.9",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pydantic-ai-slim[openai]>=1.102.0",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "pytube>=15.0.0",
    "pyvis>=0.3.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "scrapetube>=2.6.0",
    "spacy>=3.8.13",
    "sqlmodel>=0.0.38",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
